# ManufacturingLab

./: .gitignore  Equipment_Cost.xlsx  Equipment_cost_modified.py  README.md  SC811_cost_model.py  equipment_cost.py
deprecated_code/: filter.py  preprocess.py  pyproject.toml  requirements.txt
deprecated_code/mobilesam/: run_mobilesam.py
deprecated_code/preprocess/: ridge_boxes.txt  ridge_features.csv
deprecated_code/scripts/: sam3_batch_segment.py  sam3_smoke.py
deprecated_code/sem-crack-labeling/: .gitignore  README.md  docker-compose.yml  labeling_config.xml
deprecated_code/src/cathode_cracks/: __init__.py  cli.py  io.py
deprecated_code/tests/: test_smoke.py
sam3_single_image/: run_particle_to_crack.py  run_single_simple.py  run_tile.py  run_with_hints.py  show_crop.py
