[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cathode_cracks"
version = "0.1.0"
description = "Crack detection in SEM images of NMC 622 cathodes."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "Proprietary" }
authors = [{ name = "UW Capstone" }]

# Runtime dependencies — only what the shipped pipeline and GUI need.
# Dev-only deps (torch, sam3, napari, training tooling) live in [project.optional-dependencies].
dependencies = [
    "numpy>=1.26,<3",
    "tifffile>=2024.1.30",
    "imagecodecs>=2024.1.1",   # needed by tifffile for JPEG-compressed TIFFs
    "scikit-image>=0.22",
    "opencv-python>=4.9",
    "Pillow>=10.2",
    "PyYAML>=6.0",
    "onnxruntime>=1.17",
    "PySide6>=6.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.3",
]
# Heavy deps only needed off-device for annotation + training; keep out of the shipped .exe.
train = [
    "torch>=2.2",
    "torchvision>=0.17",
    "segmentation-models-pytorch>=0.3.3",
    "albumentations>=1.4",
]
annotate = [
    "napari[all]>=0.4.19",
    "napari-SAM4IS @ git+https://github.com/hiroalchem/napari-SAM4IS.git",
    "sam3 @ git+https://github.com/hiroalchem/sam3.git@patched-macos",
    "torch>=2.2",
    "torchvision>=0.17",
    "timm>=1.0.17",
    "einops>=0.8,<0.9",
    "huggingface-hub>=0.30,<1",
    "av>=12",
    "pycocotools>=2",
]

[project.scripts]
detect-cracks = "cathode_cracks.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q -p no:napari"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]
ignore = []
